fix: Add margin-top to menu on mobile

--- a/assets/sass/dropdown.scss
+++ b/assets/sass/dropdown.scss
@@ -123,12 +123,14 @@
       bottom: 100%;
       top: auto;
       animation-name: dropdown-open-above;
+      margin-bottom: 0.5rem;
     }
 
     &--below {
       top: 100%;
       bottom: auto;
       animation-name: dropdown-open-below;
+      margin-top: 0.5rem;
     }
 
     &--right {
